# Folden

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  FAQ.md  LICENSE.md  README.md  build.rs
.github/workflows/: integration.yml
debian/: foldend.service  foldend_config.toml  postrm
examples/example_pipelines/: execute_make.toml  move_to_subfolder_by_current_date.toml
folden/: Cargo.toml
folden/src/: main.rs  subcommand.rs
foldend/: Cargo.toml
foldend/src/: main.rs
folder_handler/: Cargo.toml  test_archive_join_handler_config.toml
folder_handler/src/: lib.rs
folder_handler/src/common_handlers/: archive_join_handler.rs  mod.rs
generated_types/: Cargo.toml  build.rs  handler_service.proto  handler_types.proto  inter_process.proto
generated_types/src/: lib.rs
pipelines/: Cargo.toml
pipelines/src/: event.rs  lib.rs  pipeline_config.rs  pipeline_context_input.rs  pipeline_execution_context.rs  pipeline_handler.rs  workflow_config.rs  workflow_context_input.rs  workflow_execution_context.rs  workflow_handler.rs
pipelines/src/actions/: mod.rs  move_to_dir.rs  run_cmd.rs
proto/: inter_process.proto
server/: Cargo.toml
server/src/: config.rs  main.rs  mapping.rs
server/src/database_access/: database_access.rs  mod.rs
server/src/server/: inter_process.rs  mod.rs
src/: lib.rs  main.rs  shared_config.rs  shared_utils.rs  subcommand.rs
src/client/: main.rs
src/client/subcommand/: generate_subcommand.rs  mod.rs  modify_subcommand.rs  register_subcommand.rs  start_subcommand.rs  status_subcommand.rs  stop_subcommand.rs  subcommand.rs  subcommand_utils.rs  trace_subcommand.rs
src/foldend/: config.rs  handler_mapping.rs  main.rs  mapping.rs
src/foldend/handler_server/: handler_service.rs  mod.rs  server.rs  utils.rs
src/foldend/handler_server/endpoints/: get_directory_status_endpoint.rs  handler_service_endpoint.rs  mod.rs  modify_endpoint.rs  register_endpoint.rs  start_handler_endpoint.rs  stop_handler_endpoint.rs  trace_endpoint.rs  trace_handler_stream.rs
src/foldend/server/: handler_service.rs  inter_process.rs  mod.rs
src/foldend/server/endpoints/: get_directory_status_endpoint.rs  handler_service_endpoint.rs  mod.rs  modify_endpoint.rs  register_endpoint.rs  start_handler_endpoint.rs  stop_handler_endpoint.rs  trace_endpoint.rs
src/foldend/startup/: mod.rs  windows.rs
src/subcommand/: cli.rs  generate_subcommand.rs  generate_workflow_subcommand.rs  list_subcommand.rs  mod.rs  register_subcommand.rs  start_subcommand.rs  status_subcommand.rs  stop_subcommand.rs  subcommand.rs  this_subcommand.rs
wix/: main.wxs
workflows/: Cargo.toml
workflows/src/: event.rs  lib.rs  workflow_config.rs  workflow_execution_context.rs  workflow_handler.rs
workflows/src/actions/: mod.rs  move_to_dir.rs  run_cmd.rs
workflows/src/events/: mod.rs
