[package]
name = "folden"
version = "0.2.0"
authors = ["STRONG-MAD <mayan.shoshani7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "folden"
path = "src/client/main.rs"

[[bin]]
name = "foldend"
path = "src/foldend/main.rs"

[workspace]
members = [
    "generated_types",
    "pipelines"
]

[dependencies]
generated_types = {path = "generated_types"}
pipelines = {path = "pipelines"}

strum = "0.21.0"
strum_macros = "0.21.1"
toml = "0.5.8"
tonic = "0.4.3"
clap = "2.33.3"
typetag = "0.1.7"
futures = "0.3.15"
cli-table = "0.4.6"
dyn-clone = "1.0.4"
async-stream = "0.3.2"
serde = {version = "1.0.117", features = ["derive"] }
tokio = { version = "1.6.1", features = ["full"] }
tokio-stream = { version ="0.1.6", features = ["default", "sync"] }

# foldend dependencies
serde_json = "1.0.64"
crossbeam = "0.8.1"
notify = "5.0.0-pre.7"
tracing = "0.1.26"
tracing-appender = "0.1.2"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.18"

[target.'cfg(windows)'.dependencies]
windows-service = "0.3.1"

[package.metadata.deb]
section = "utility"
maintainer-scripts = "debian/"
systemd-units = { enable = false }
assets = [
    ["debian/foldend_config.toml", "/etc/foldend/foldend_config.toml", "644"],
    ["debian/foldend.service", "/lib/systemd/system/foldend.service", "644"],
    ["target/release/folden", "/usr/bin/", "755"],
    ["target/release/foldend", "/usr/sbin/", "755"]
]