[package]
name = "folder_handler"
version = "0.1.0"
authors = ["lambaaada <mayan.shoshani7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
toml = "0.5.7"
typetag = "0.1.6"
tokio = { version = "0.2", features = ["sync"] }