[package]
name = "generated_types"
version = "0.3.0"
authors = ["STRONG-MAD <mayan.shoshani7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
prost = "0.7.0"
prost-types = "0.7.0"
tonic = "0.4.3"

[build-dependencies]
tonic-build = "0.4.2"