[package]
name = "pipelines"
version = "0.2.0"
authors = ["STRONG-MAD <mayan.shoshani7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generated_types = { path = "../generated_types" }

strum = "0.21.0"
strum_macros = "0.21.1"
clap = "2.33.3"
regex = "1.5.4"
itertools = "0.10.0"
chrono = "0.4.19"
crossbeam = "0.8.1"
notify = "5.0.0-pre.7"
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.64"
toml = "0.5.8"
typetag = "0.1.7"
tonic = "0.4.3"
tokio = { version = "1.6.1", features = ["sync"] }
lazy_static = "1.4.0"
tracing = "0.1.26"
tracing-futures = "0.2.5"