[package]
name = "pipelines"
version = "0.4.0"
authors = ["STRONG-MAD <mayan.shoshani7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generated_types = { path = "../generated_types" }

strum = "0.24.1"
strum_macros = "0.24.2"
clap = "3.2.8"
regex = "1.5.6"
itertools = "0.10.3"
chrono = "0.4.19"
crossbeam = "0.8.1"
notify = "5.0.0-pre.15"
serde = {version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
toml = "0.5.9"
typetag = "0.2.0"
tonic = "0.7.2"
tokio = { version = "1.19.2", features = ["sync"] }
lazy_static = "1.4.0"
tracing = "0.1.35"
tracing-futures = "0.2.5"