[package]
name = "server"
version = "0.1.0"
authors = ["lambaaada <mayan.shoshani7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generated_types = {path = "../generated_types"}

toml = "0.5.7"
clap = "2.33.3"
tonic = "0.3.1"
rocksdb = "0.15.0"
tokio = { version = "0.2", features = ["full"] }
serde = {version = "1.0.117", features = ["derive"] }