[package]
name = "server"
version = "0.1.0"
authors = ["lambaaada <mayan.shoshani7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
folder_handler = {path = "../folder_handler"}
generated_types = {path = "../generated_types"}

crossbeam = "0.8.0"
notify = "5.0.0-pre.6"
toml = "0.5.7"
clap = "2.33.3"
tonic = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0"