[package]
name = "workflows"
version = "0.1.0"
authors = ["lambaaada <mayan.shoshani7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1"
itertools = "0.10.0"
chrono = "0.4"
crossbeam = "0.8.0"
notify = "5.0.0-pre.7"
serde = {version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
toml = "0.5.7"
typetag = "0.1.6"
tokio = { version = "1.5.0", features = ["sync"] }
lazy_static = "1.4.0"
tracing = "0.1"
tracing-futures = "0.2.5"